--- a/1/index.html
+++ b/1/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>加载中</title>
+<title>欢迎回家</title>
 </head>
 <body>
 <script>
-location.href="http://baidu.com/";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=1CvasYR-is5zQiA0puudY8AANpCTZZtT&authKey=IFkGZeu2zXFup0mO9ldaLjCT3KYWbSLErc%2Ffa0uleWbEOaC7Vq4zQo8caf5fxRNU&noverify=0&group_code=818201885";
 </script>
 </body>
 </html>
